# doca-app

./: README.md  gpunetio_common.h  gpunetio_simple_receive_main.c  meson.build
device/: gpunetio_simple_receive_kernel.cu
host/: gpunetio_simple_receive_sample.c
